[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Dreem", email = "dreem.com"},
]
dependencies = [
    "Cython~=0.29",
    "h5py~=2.8",
    "tqdm~=4.61",
    "boto3~=1.9",
    "joblib~=0.12",
    "matplotlib~=3.0",
    "numpy~=1.19",
    "pyedflib~=0.1",
]
requires-python = "~=3.6"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
