[tool.poetry]
name = "dosed"
version = "0.0.5"
description = "Dreem One Shot Event Detector"
authors = ["Valentin Thorey, Stanislas Chambon, Albert Bou"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
Cython = "^0.29"
h5py = "^2.8"
tqdm = "^4"
boto3 = "^1.9"
joblib = "^0.14"
matplotlib = "^3"
pyedflib = "^0.1"
torch = "^1" 
pytest = "^3.10"
pytest-cov = "^2.6"
ipython = "^7.23.1"
jupyter = "^1.0.0"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
